src/test/ui/issues/issue-17033.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-17033.rs:2:5
   |
LL |     (*p)(())
   |     ^^^^^--^
   |          |
   |          expected `&mut ()`, found `()`
   |
help: provide an argument of the correct type
   |
LL |     ({&mut ()})
   |     ^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
